Update code according to the new df

--- a/Avito/tg-bot.ipynb
+++ b/Avito/tg-bot.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "26ef93e9",
+   "metadata": {},
+   "source": [
+    "## *Этап - Создание тг-бота*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06f424da",
+   "metadata": {},
+   "source": [
+    "#### Импорт библиотек, импорт моделей и датасетов\n",
+    "\n",
+    "Для создания тг-бота использовал библиотеку telebot. Для импорта модели библиотеку pickle из предыдущего этапа. И pandas, numpy удобной работы с моделями."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "611542ac",
    "metadata": {},
    "outputs": [],
@@ -16,12 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "43d0acb4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('token.txt') as f:\n",
+    "# Изменил расположение токена из репозитория, чтобы скрыть его\n",
+    "with open('/Users/andrejgulaev/Documents/GitHub/Tokens/token.txt') as f:\n",
     "    token = f.readline()\n",
     "bot = telebot.TeleBot(token)\n",
     "\n",
@@ -30,12 +49,13 @@
     "with open('model_links.pkl', 'rb') as f:\n",
     "    model_links = pickle.load(f)\n",
     "\n",
-    "df = pd.read_csv('df.csv', index_col=0)"
+    "df = pd.read_csv('df_all_features.csv', index_col=0)\n",
+    "df_with_links = pd.read_csv('database_with_links.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "6994db30",
    "metadata": {},
    "outputs": [],
@@ -50,6 +70,9 @@
     "        self.floor = None\n",
     "        self.max_floor = None\n",
     "        self.year = None\n",
+    "        self.balcony = None\n",
+    "        self.bathroom = None\n",
+    "        self.district = None\n",
     "        \n",
     "@bot.message_handler(commands=['help', 'start'])\n",
     "def send_welcome(message):\n",
@@ -59,11 +82,12 @@
     "    msg = bot.reply_to(message, \"\"\"\\\n",
     "Здравствуйте! Я - бот, который подскажет цену на вашу квартиру в г. Пермь и отправит ссылки на похожие варинты квартир.\n",
     "Мне будут необходимы следующие данные:\n",
-    "- количество комнат\n",
-    "- площадь квартиры\n",
-    "- этаж\n",
-    "- этажность дома\n",
-    "- год постройки дома.\n",
+    "- количество комнат;\n",
+    "- площадь квартиры;\n",
+    "- этаж;\n",
+    "- этажность дома;\n",
+    "- год постройки дома;\n",
+    "- район.\n",
     "\"\"\", reply_markup=markup)\n",
     "    bot.register_next_step_handler(msg, first_step)\n",
     "\n",
@@ -86,7 +110,7 @@
     "        msg = bot.reply_to(message, 'Какая площадь квартиры?')\n",
     "        bot.register_next_step_handler(msg, process_square_step)\n",
     "    except Exception as e:\n",
-    "        bot.reply_to(message, 'Упс!')\n",
+    "        bot.reply_to(message, 'Ошибка process_rooms_step')\n",
     "\n",
     "\n",
     "def process_square_step(message):\n",
@@ -102,7 +126,7 @@
     "        msg = bot.reply_to(message, 'Какой этаж?')\n",
     "        bot.register_next_step_handler(msg, process_max_floor_step)\n",
     "    except Exception as e:\n",
-    "        bot.reply_to(message, 'Упс!')\n",
+    "        bot.reply_to(message, 'Ошибка process_square_step')\n",
     "\n",
     "\n",
     "def process_max_floor_step(message):\n",
@@ -118,7 +142,8 @@
     "        msg = bot.reply_to(message, 'Сколько этажей дом?')\n",
     "        bot.register_next_step_handler(msg, process_year_step)\n",
     "    except Exception as e:\n",
-    "        bot.reply_to(message, 'Упс!')\n",
+    "        bot.reply_to(message, 'Ошибка process_max_floor_step')\n",
+    "        \n",
     "        \n",
     "def process_year_step(message):\n",
     "    try:\n",
@@ -131,12 +156,12 @@
     "        estate = user_dict[chat_id]\n",
     "        estate.max_floor = max_floor\n",
     "        msg = bot.reply_to(message, 'Какого года дом?')\n",
-    "        bot.register_next_step_handler(msg, process_ending_step)\n",
+    "        bot.register_next_step_handler(msg, process_balcony_step)\n",
     "    except Exception as e:\n",
-    "        bot.reply_to(message, 'Упс!')\n",
+    "        bot.reply_to(message, 'Ошибка process_year_step')\n",
     "\n",
-    "\n",
-    "def process_ending_step(message):\n",
+    "        \n",
+    "def process_balcony_step(message):\n",
     "    try:\n",
     "        chat_id = message.chat.id\n",
     "        year = message.text\n",
@@ -147,16 +172,66 @@
     "        estate = user_dict[chat_id]\n",
     "        estate.year = year\n",
     "        markup = types.ReplyKeyboardMarkup(one_time_keyboard=True)\n",
+    "        markup.add('балкон', 'лоджия')\n",
+    "        msg = bot.reply_to(message, 'Балкон или лоджия?', reply_markup=markup)\n",
+    "        bot.register_next_step_handler(msg, process_bathroom_step)\n",
+    "    except Exception as e:\n",
+    "        bot.reply_to(message, 'Ошибка process_balcony_step')\n",
+    "\n",
+    "def process_bathroom_step(message):\n",
+    "    try:\n",
+    "        chat_id = message.chat.id\n",
+    "        balcony = message.text\n",
+    "        estate = user_dict[chat_id]\n",
+    "        if (balcony == u'балкон') or (balcony == u'лоджия'):\n",
+    "            estate.balcony = balcony\n",
+    "        else:\n",
+    "            raise Exception()\n",
+    "        markup = types.ReplyKeyboardMarkup(one_time_keyboard=True)\n",
+    "        markup.add('раздельный', 'совмещенный')\n",
+    "        msg = bot.reply_to(message, 'Санузел раздельный или совмещенный?', reply_markup=markup)\n",
+    "        bot.register_next_step_handler(msg, process_district_step)\n",
+    "    except Exception as e:\n",
+    "        bot.reply_to(message, 'Ошибка process_bathroom_step')\n",
+    "\n",
+    "        \n",
+    "def process_district_step(message):\n",
+    "    try:\n",
+    "        chat_id = message.chat.id\n",
+    "        bathroom = message.text\n",
+    "        estate = user_dict[chat_id]\n",
+    "        if (bathroom == u'раздельный') or (bathroom == u'совмещенный'):\n",
+    "            estate.bathroom = bathroom\n",
+    "        else:\n",
+    "            raise Exception()\n",
+    "        markup = types.ReplyKeyboardMarkup(one_time_keyboard=True)\n",
+    "        markup.add('Свердловский', 'Мотовилихинский', 'Индустриальный', 'Дзержинский', 'Орджоникидзевский', 'Кировский', 'Ленинский')\n",
+    "        msg = bot.reply_to(message, 'Какой район?', reply_markup=markup)\n",
+    "        bot.register_next_step_handler(msg, process_ending_step)\n",
+    "    except Exception as e:\n",
+    "        bot.reply_to(message, 'Ошибка process_district_step')   \n",
+    "        \n",
+    "        \n",
+    "def process_ending_step(message):\n",
+    "    try:\n",
+    "        chat_id = message.chat.id\n",
+    "        district = message.text\n",
+    "        estate = user_dict[chat_id]\n",
+    "        estate.district = district\n",
+    "        markup = types.ReplyKeyboardMarkup(one_time_keyboard=True)\n",
     "        markup.add('Узнать цену')\n",
     "        msg = bot.reply_to(message, f'''Ваши данные по квартире:\n",
     "- количество комнат: {estate.rooms}\n",
     "- площадь квартиры: {estate.square}\n",
     "- этаж: {estate.floor}\n",
     "- этажность дома: {estate.max_floor}\n",
-    "- год постройки дома: {estate.year}''', reply_markup=markup)\n",
+    "- год постройки дома: {estate.year}\n",
+    "- {estate.balcony}\n",
+    "- санузел: {estate.bathroom}\n",
+    "- район: {estate.district}''', reply_markup=markup)\n",
     "        bot.register_next_step_handler(msg, predict_price)\n",
     "    except Exception as e:\n",
-    "        bot.reply_to(message, 'Упс!')\n",
+    "        bot.reply_to(message, 'Ошибка process_ending_step')\n",
     "\n",
     "\n",
     "def predict_price(message):\n",
@@ -165,14 +240,58 @@
     "        estate = user_dict[chat_id]\n",
     "        \n",
     "        X_pred = pd.DataFrame({'Rooms': [int(estate.rooms)], \n",
-    "                       'Area': [float(estate.square)], \n",
-    "                       'Floor': [int(estate.floor)], \n",
-    "                       'Max_house_floor': [int(estate.max_floor)],\n",
-    "                       'Year_built': [int(estate.year)]\n",
-    "                       })\n",
+    "                               'Area': [float(estate.square)], \n",
+    "                               'Floor': [int(estate.floor)], \n",
+    "                               'Max_house_floor': [int(estate.max_floor)],\n",
+    "                               'Year_built': [int(estate.year)],\n",
+    "                               'balcony_or_loggia_балкон': [0],\n",
+    "                               'balcony_or_loggia_лоджия': [0],\n",
+    "                               'Bathroom_раздельный': [0],\n",
+    "                               'Bathroom_совмещенный': [0],\n",
+    "                               'District_Дзержинский': [0],\n",
+    "                               'District_Индустриальный': [0],\n",
+    "                               'District_Кировский': [0],\n",
+    "                               'District_Ленинский': [0],\n",
+    "                               'District_Мотовилихинский': [0],\n",
+    "                               'District_Орджоникидзевский': [0],\n",
+    "                               'District_Свердловский': [0]})\n",
     "        \n",
-    "        price = int(model_price.predict(X_pred)[0])\n",
-    "        price_if = price\n",
+    "        if estate.balcony == 'балкон':\n",
+    "            X_pred['balcony_or_loggia_балкон'] = 1\n",
+    "        else:\n",
+    "            X_pred['balcony_or_loggia_лоджия'] = 1\n",
+    "        \n",
+    "        if estate.bathroom == 'раздельный':\n",
+    "            X_pred['Bathroom_раздельный'] = 1\n",
+    "        else:\n",
+    "            X_pred['Bathroom_совмещенный'] = 1\n",
+    "        \n",
+    "        if estate.district == 'Дзержинский':\n",
+    "            X_pred['District_Дзержинский'] = 1\n",
+    "        elif estate.district == 'Индустриальный':\n",
+    "            X_pred['District_Индустриальный'] = 1\n",
+    "        elif estate.district == 'Кировский':\n",
+    "            X_pred['District_Кировский'] = 1\n",
+    "        elif estate.district == 'Ленинский':\n",
+    "            X_pred['District_Ленинский'] = 1\n",
+    "        elif estate.district == 'Мотовилихинский':\n",
+    "            X_pred['District_Мотовилихинский'] = 1\n",
+    "        elif estate.district == 'Орджоникидзевский':\n",
+    "            X_pred['District_Орджоникидзевский'] = 1\n",
+    "        elif estate.district == 'Свердловский':\n",
+    "            X_pred['District_Свердловский'] = 1\n",
+    "        \n",
+    "        neighbors = model_links.best_estimator_[1].kneighbors(X_pred, return_distance=False)\n",
+    "        links = []\n",
+    "        for i in neighbors[0]:\n",
+    "            if df_with_links.iloc[i, 1] == X_pred.iloc[0, 0]:\n",
+    "                links.append(df_with_links.iloc[i, -1])\n",
+    "                \n",
+    "                \n",
+    "        for column in X_pred.columns[:5]:\n",
+    "            X_pred[column] = np.log(X_pred[column])\n",
+    "        price = int(np.exp(model_price.predict(X_pred)[0]))\n",
+    "        price_if = int(price)\n",
     "        price -= price % -10000\n",
     "        price = str(price)\n",
     "        if len(price) == 7:\n",
@@ -180,21 +299,16 @@
     "        elif len(price) == 8:\n",
     "            price = price[:2] + ' ' + price[1:4] + ' ' + price[4:]\n",
     "        \n",
-    "        neighbors = model_links.best_estimator_[1].kneighbors(X_pred, return_distance=False)[0]\n",
-    "        links = []\n",
-    "        for i in neighbors:\n",
-    "            if ((df.iloc[i, -7] - 900000) < price_if < (df.iloc[i, -7] + 900000)) and (df.iloc[i, -6] == X_pred.iloc[0, 0]):\n",
-    "                links.append(df.iloc[i, -1])\n",
     "        bot.send_message(chat_id, f'''Ориентировочная стоимость вашей квартиры: <b>{price}</b> руб.\n",
     "Похожие объявления:\n",
     "{' '.join(links)}''', parse_mode='html')\n",
     "    except Exception as e:\n",
-    "        bot.reply_to(message, 'Упс!')"
+    "        bot.reply_to(message, 'Ошибка predict_price')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "8561ca4e",
    "metadata": {
     "scrolled": false
@@ -203,14 +317,6 @@
    "source": [
     "bot.polling(none_stop=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc299019",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
