--- a/Avito/FE-and-ML.ipynb
+++ b/Avito/FE-and-ML.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "#### Импорт библиотек\n",
     "\n",
-    "Для работы с датафреймом использовал стандартые библиотеки: pandas, numpy, matplotlib, seaborn). При построении модели пользовался библиотекой sklearn.\n",
+    "Для работы с датафреймом использовал стандартые библиотеки: pandas, numpy, matplotlib, seaborn. При построении модели пользовался библиотекой sklearn.\n",
     "\n",
     "Для сохранения полученной модели и использовании ее в следующем этапе импортировал библиотеку pickle."
    ]
