--- a/Avito/Parsing-and-creating-df.ipynb
+++ b/Avito/Parsing-and-creating-df.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "#### Импорт библиотек\n",
-    "Для парсинга я использовал библиотеки: BeautifulSoup, request и hyper.\n",
+    "Для парсинга я использовал библиотеки: BeautifulSoup, requests и hyper.\n",
     "\n",
     "Изначально авито идентифицировал мой request запрос как запрос парсера и выдавал ошибку 403 (доступ запрещен), несмотря на изменение HEADERS и попытки подключения через мобильную сеть. Поэтому использовал hyper.contrib для обхода ошибки 403, такое решение нашел в [интернете](https://qna.habr.com/q/1124028?).\n",
     "\n",
