--- a/Dash/Parsing-using-api.ipynb
+++ b/Dash/Parsing-using-api.ipynb
@@ -1,17 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a5dccab1",
+   "metadata": {},
+   "source": [
+    "## Этап - *Парсинг и сохранение данных*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6746c2ac",
+   "metadata": {},
+   "source": [
+    "#### Импорт библиотек\n",
+    "\n",
+    "Для парсинга, используя API Вконтакте, достаточно библиотеки requests. Для сохранения данных импортировал библиотеку csv."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "238cd195",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
     "import requests\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from datetime import datetime"
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a738ef5",
+   "metadata": {},
+   "source": [
+    "#### Парсинг и сохранение данных\n",
+    "\n",
+    "Изучил необходимые методы из [документации](https://dev.vk.com/method) и, используя API Вконтакте, воспользовался соответствующими методами с заданными параметрами."
    ]
   },
   {
@@ -25,7 +50,9 @@
     "    '''\n",
     "    Парсинг постов из группы vk.com/imct_fefu\n",
     "    '''\n",
-    "    TOKEN = '53a7de0353a7de0353a7de03aa53dacccf553a753a7de03310ae0326fdc7e532b7b4321' # скрыть\n",
+    "    # Локальное расположение токена, чтобы скрыть его из репозитория\n",
+    "    with open('/Users/andrejgulaev/Documents/GitHub/Tokens/token-api.txt') as f:\n",
+    "        TOKEN = f.readline()\n",
     "    VERSION = 5.131\n",
     "    DOMAIN = 'imct_fefu'\n",
     "    count = 100 # Указать кол-во постов. Кол-во может быть больше фактического. Кол-во смотреть здесь: https://vk.com/wall-206944280?offset=80&own=1\n",
@@ -80,11 +107,16 @@
    "outputs": [],
    "source": [
     "def take_comments():\n",
-    "    TOKEN = '53a7de0353a7de0353a7de03aa53dacccf553a753a7de03310ae0326fdc7e532b7b4321'\n",
+    "    '''\n",
+    "    Парсинг комментариев с постов из группы vk.com/imct_fefu\n",
+    "    '''\n",
+    "    # Локальное расположение токена, чтобы скрыть его из репозитория\n",
+    "    with open('/Users/andrejgulaev/Documents/GitHub/Tokens/token-api.txt') as f:\n",
+    "        TOKEN = f.readline()\n",
     "    VERSION = 5.131\n",
     "    owner_id = -206944280\n",
     "    count = 10\n",
-    "    post_id = 245\n",
+    "    post_id = 245 # ID последнего поста: https://vk.com/wall-206944280?offset=80&own=1\n",
     "    all_comments = []\n",
     "    while post_id > 0:\n",
     "        response = requests.get('https://api.vk.com/method/wall.getComments',\n",
@@ -107,6 +139,9 @@
     "    return all_comments\n",
     "\n",
     "def file_writer_comments(all_comments):\n",
+    "    '''\n",
+    "    Запись комментариев в табличный файл\n",
+    "    '''\n",
     "    with open ('IMKT-comments.csv', 'w') as file:\n",
     "        a_pen = csv.writer(file)\n",
     "        a_pen.writerow(('id', 'from_id', 'likes', 'text'))\n",
@@ -137,7 +172,12 @@
    "outputs": [],
    "source": [
     "def take_members():\n",
-    "    TOKEN = '53a7de0353a7de0353a7de03aa53dacccf553a753a7de03310ae0326fdc7e532b7b4321'\n",
+    "    '''\n",
+    "    Парсинг участников группы vk.com/imct_fefu\n",
+    "    '''\n",
+    "    # Локальное расположение токена, чтобы скрыть его из репозитория\n",
+    "    with open('/Users/andrejgulaev/Documents/GitHub/Tokens/token-api.txt') as f:\n",
+    "        TOKEN = f.readline()\n",
     "    VERSION = 5.131\n",
     "    group_id = 206944280\n",
     "    count = 1000\n",
